working version with haml

--- a/app/assets/javascripts/common/common.js.coffee.erb
+++ b/app/assets/javascripts/common/common.js.coffee.erb
@@ -9,7 +9,7 @@ define [
     ($stateProvider) ->
       $stateProvider.state "home",
         url: "/"
-        templateUrl: "/assets/common/common.html"
+        templateUrl: "<%= asset_path("common/common.html") %>"
         controller: "CommonController"
 
   ]).controller "CommonController", [
