--- a/app/assets/javascripts/common/common.js.coffee.erb
+++ b/app/assets/javascripts/common/common.js.coffee.erb
@@ -7,7 +7,7 @@ define [
   angular.module("commonModule", ["ui.router"]).config([
     "$stateProvider"
     ($stateProvider) ->
-      $stateProvider.state "home",
+      $stateProvider.state "common",
         url: "/"
         templateUrl: "<%= asset_path("common/common.html") %>"
         controller: "CommonController"
