--- a/spec/javascripts/support/run.html.erb
+++ b/spec/javascripts/support/run.html.erb
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
-    <title>Jasmine suite</title>
+    <title>Jasmine testing</title>
     <link rel="shortcut icon" type="image/png" href="/__JASMINE_ROOT__/images/jasmine_favicon.png">
 
     <% css_files.each do |css_file| %>
       <link rel="stylesheet" href="<%= css_file %>" type="text/css" media="screen"/>
     <% end %>
+
+    <% @config.helpers.each do |js_file| %>
+      <script src="<%= js_file %>" type="text/javascript"></script>
+    <% end %>
+
+    <% extend RequirejsHelper %>
+    <% RequirejsHelper._priority = @config.spec_files.map { |s| s.sub(/\.js$/,'') } %>
+    <%= requirejs_include_tag %>
 
     <% jasmine_files.each do |jasmine_file| %>
       <script src="<%= jasmine_file %>" type="text/javascript"></script>
@@ -43,17 +51,10 @@
 
       })();
     </script>
-
-    <% @config.helpers.each do |js_file| %>
-      <script src="<%= js_file %>" type="text/javascript"></script>
-    <% end %>
-
-    <% extend RequirejsHelper %>
-    <% RequirejsHelper._priority = @config.spec_files.map { |s| s.sub(/\.js$/,'') } %>
-    <%= requirejs_include_tag %>
-
   </head>
   <body>
+    <div><%= jasmine_files %></div>
+    <div><%= @config.spec_files %></div>
     <div id="jasmine_content"></div>
   </body>
 </html>
