--- a/app/views/layouts/jasmine_rails/spec_runner.html.erb
+++ b/app/views/layouts/jasmine_rails/spec_runner.html.erb
@@ -3,8 +3,8 @@
   <head>
     <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
     <title>Jasmine Specs</title>
-
     <%= stylesheet_link_tag *jasmine_css_files %>
+    <% extend RequirejsHelper %>
     <%= requirejs_include_tag %>
     <%= javascript_include_tag *jasmine_js_files %>
   </head>
