--- a/app/assets/javascripts/common/common.html.haml
+++ b/app/assets/javascripts/common/common.html.haml
@@ -2,7 +2,7 @@
   .header
     %ul.nav.nav-pills.pull-right
       %li.active
-        %a{href: "#home"} Home
+        %a{href: "#"} Home
       %li
         %a{href: "#"} About
       %li
