--- a/app/views/layouts/jasmine_rails/spec_runner.html.erb
+++ b/app/views/layouts/jasmine_rails/spec_runner.html.erb
@@ -11,35 +11,10 @@
   <body>
     <div id="jasmine_content"></div>
     <%= yield %>
-    <script type="text/javascript">
-      var jsApiReporter;
-      (function() {
-        var jasmineEnv = jasmine.getEnv();
-
-        jsApiReporter = new jasmine.JsApiReporter();
-        var htmlReporter = new jasmine.HtmlReporter();
-
-        jasmineEnv.addReporter(jsApiReporter);
-        jasmineEnv.addReporter(htmlReporter);
-
-        jasmineEnv.specFilter = function(spec) {
-          return htmlReporter.specFilter(spec);
-        };
-
-        var currentWindowOnload = window.onload;
-
-        window.onload = function() {
-          if (currentWindowOnload) {
-            currentWindowOnload();
-          }
-          execJasmine();
-        };
-
-        function execJasmine() {
-          jasmineEnv.execute();
-        }
-
-      })();
+    <script>
+      setTimeout(function () {
+        jasmineEnv.execute();
+      }, 10);
     </script>
   </body>
 </html>
