--- a/app/views/layouts/jasmine_rails/spec_runner.html.erb
+++ b/app/views/layouts/jasmine_rails/spec_runner.html.erb
@@ -13,7 +13,7 @@
     <%= yield %>
     <script>
       setTimeout(function () {
-        jasmineEnv.execute();
+        jasmine.getEnv().execute()
       }, 10);
     </script>
   </body>
