add helper for requirejs

--- a/app/views/layouts/jasmine_rails/spec_runner.html.erb
+++ b/app/views/layouts/jasmine_rails/spec_runner.html.erb
@@ -13,8 +13,8 @@
     <%= yield %>
     <script>
       setTimeout(function () {
-        jasmine.getEnv().execute()
-      }, 10);
+        jasmine.getEnv().execute();
+      }, 2000);
     </script>
   </body>
 </html>
