--- a/app/views/layouts/jasmine_rails/spec_runner.html.erb
+++ b/app/views/layouts/jasmine_rails/spec_runner.html.erb
@@ -5,11 +5,17 @@
     <title>Jasmine Specs</title>
     <%= stylesheet_link_tag *jasmine_css_files %>
     <%= requirejs_include_tag %>
-    <%= javascript_include_tag *jasmine_js_files %>
   </head>
   <body>
     <div id="jasmine_content"></div>
     <%= yield %>
+    <%= javascript_tag do %>
+      require(['boot', 'json2'], function() {
+        require(['jasmine-specs'], function() {
+          window.onload();
+        });
+      });
+    <% end %>
   </body>
 </html>
 
